--- a/server/package.json
+++ b/server/package.json
@@ -21,11 +21,17 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.1.1",
+    "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.1.1",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.1.1",
+    "@nestjs/typeorm": "^8.0.2",
+    "passport": "^0.5.0",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.4.0"
+    "rxjs": "^7.4.0",
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.3",
