--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,9 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/passport-google-oauth20": "^2.0.11",
     "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
