--- a/server/package.json
+++ b/server/package.json
@@ -23,12 +23,19 @@
     "@nestjs/common": "^8.1.1",
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.1.1",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/passport-github2": "^1.2.5",
     "@types/passport-google-oauth20": "^2.0.11",
+    "@types/passport-jwt": "^3.0.6",
+    "cookie-parser": "^1.4.6",
     "passport": "^0.5.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
