--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "@types/passport-github2": "^1.2.5",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.6",
+    "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "passport": "^0.5.0",
     "passport-github2": "^0.1.12",
