--- a/server/package.json
+++ b/server/package.json
@@ -27,10 +27,12 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/passport-github2": "^1.2.5",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.6",
+    "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "passport": "^0.5.0",
