--- a/server-fastify/package.json
+++ b/server-fastify/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "fastify": "^3.27.1"
+    "fastify": "^3.27.1",
+    "mysql": "^2.18.1",
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
     "@types/node": "^17.0.16",
