--- a/server-fastify/package.json
+++ b/server-fastify/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.0",
     "fastify": "^3.27.1",
     "mysql": "^2.18.1",
+    "passport-google-oauth20": "^2.0.0",
     "typeorm": "^0.2.41"
   },
   "devDependencies": {
